cka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong
  namespace: ing-internal
spec:
  rules:
  - http:
     paths:
     - pathType: Prefix
       path:
       backend: 
         service:
           name: hi
           port: 
             name: http
             number: 5678
