cka/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-port-from-namespace
  namespace: internal
spec:
  podSelector: {}
  ingress:
  - from: 
    - namespaceSelector: 
        matchLabels: 
          label: internal
    - podSelector: {}
    ports: 
    - port: 9000
